--- a/chat.html
+++ b/chat.html
@@ -66,7 +66,11 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 
 /* MOBILE */
 @media(max-width:768px){
-  #mainContent { flex-direction:column; height: calc(100vh - 108px - 60px); } /* reserve espaço footer+input+userline */
+  #mainContent {
+  flex-direction:row;
+  height: calc(100vh - 52px - 40px); /* 52px topo + 40px espaço para footer */
+  }
+  
   #userList, #adSidebar { display:none; }
   #mobileUserLine { display:flex; }
   #chatWindow { flex:1; overflow-y:auto; margin-bottom:60px; width:100%; }
