--- a/chat.html
+++ b/chat.html
@@ -73,7 +73,13 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   
   #userList, #adSidebar { display:none; }
   #mobileUserLine { display:flex; }
-  #chatWindow { flex:1; overflow-y:auto; margin-bottom:60px; width:100%; }
+  #chatWindow {
+  flex:1;
+  overflow-y:auto;
+  padding:10px;
+  margin-bottom:60px; /* já considera o input */
+  }
+  
   #chatInput { position:fixed; bottom:0; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
   footer { position:fixed; bottom:0; left:0; right:0; }
   html, body { overflow:hidden; }
